--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "emailjs": "^4.0.1",
+    "formik": "^2.2.9",
     "framer-motion": "^7.6.12",
     "lottie": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
-    "styled-components": "^5.3.6"
+    "reactstrap": "^9.1.6",
+    "styled-components": "^5.3.6",
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
