--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "reactstrap": "^9.1.6",
+    "sass": "^1.59.2",
     "styled-components": "^5.3.6",
+    "swiper": "^9.1.0",
     "yup": "^1.0.0"
   },
   "scripts": {
