--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.6.12",
     "lottie": "^0.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
@@ -30,12 +31,11 @@
     "yup": "^1.0.0"
   },
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
-    "build": "npm run build:css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "eject": "react-scripts eject"
+  
   },
   "eslintConfig": {
     "extends": [
@@ -57,9 +57,6 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.2.7",
     "web-vitals": "^3.1.0"
   }
 }
